# vimlaw

./: .coverage  .coveragerc  .csslintrc  .djlintrc  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  build.mjs  conftest.py  flake.nix  package-lock.json  package.json  process-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint-test.yaml  staging.yml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_customuser_rate.py  0003_rename_rate_customuser_user_rate.py  0004_customuser_symbol.py
apps/accounts/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
apps/activity/: admin.py  filter.py  filter_expenses.py  filter_time.py  filter_time_entries.py  forms.py  models.py  summary.py  urls.py  views.py  views_expenses.py  views_time.py
apps/agenda/: admin.py  filter.py  filter_tasks.py  forms.py  models.py  tasks.py  tasks_digest.py  urls.py  views.py
apps/billing/: admin.py  billing_views.py  filters_invoice.py  filters_payment.py  forms_invoice.py  forms_payment.py  invoice_filters.py  invoice_forms.py  invoice_views.py  models_invoice.py  models_payment.py  payment_filters.py  payment_forms.py  payment_views.py  urls.py  views.py  views_billing.py  views_invoice.py  views_payment.py
apps/calendar/: forms.py  google.py
config/: .env.example  appdata.py  context.py  helpers.py  settings.py  urls.py
docs/: ai-prompt.md  drive-notes-sync.service  drive-notes-sync.timer  qcluster.service
law/: .pre-commit-config.yaml  CLAUDE.md
scripts/: migrate_icons.py  update_pdfjs.py
src/: alpine.js  htmx.js  tiptap.js
templates/: 400.html  403.html  404.html  500.html  base-minimal.html  base.html  confirm-modal.html  errors.html  minimum.html  modals.html  nav.html  pagination.html  print.html  sidebar.html
utils/: __init__.py  mail.py  middleware.py  models.py  prepare_path.py
(+1381 files in other folders)
