[project]
name = "lawadmin"
version = "0.1.0"
description = "Law Admin - Django law practice management application"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Django core
    "Django==4.2.29",
    "psycopg2-binary==2.9.10",
    "django-environ==0.11.2",
    # Django extensions
    "django-mathfilters==1.0.0",
    "django-cleanup==8.1.0",
    "django-filter==24.3",
    "django-storages[s3]==1.14.6",
    "django-q2==1.7.2",
    "django-watson==1.6.3",
    "django-simple-history==3.7.0",
    # Date/time utilities
    "python-dateutil==2.9.0",
    "pytz==2024.1",
    "croniter==6.0.0",
    # Google APIs
    "google-api-python-client==2.136.0",
    "google-auth-oauthlib==0.4.6",
    "google-genai==1.54.0",
    # Markdown processing
    "Markdown==3.8.1",
    "pymdown-extensions==10.18",
    # PDF generation and processing
    "weasyprint==68.0",
    "pytesseract==0.3.13",
    "pdf2image==1.17.0",
    "pypdf==6.7.5",
    "ocrmypdf==16.12.0",
    # AI clients
    "anthropic==0.40.0",
    "openai==2.9.0",
    # Legal citation parsing
    "eyecite==2.7.6",
    # Build tools (needed by some packages)
    "setuptools==78.1.1",
    "gunicorn>=25.1.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest==8.4.1",
    "pytest-django==4.8.0",
    "pytest-xdist==3.8.0",
    "pytest-split==0.10.0",
    # Code formatting and linting
    "ruff>=0.15.5",
    "pre-commit==3.7.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]
fixable = ["ALL"]
extend-unsafe-fixes = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
omit = ["*migration*", "*__init__.py*"]

[tool.coverage.report]
show_missing = true
